# distributed-graph-rag-reference-architecture

./: .env.example  Dockerfile.fluentd  README.md  fluent.conf  pyproject.toml  simple_query_app.py  test.py
services/cache_service/: Dockerfile  pyproject.toml
services/cache_service/cache_service/: __init__.py  app.py
services/cache_service/cache_service/middleware/: __init__.py
services/cache_service/cache_service/models/: __init__.py
services/cache_service/cache_service/routes/: __init__.py  admin.py  chunks.py  documents.py  graph.py  health.py  query_answers.py  summaries.py
services/cache_service/cache_service/services/: __init__.py  neo4j_service.py
services/graph_processor_service/: Dockerfile  app.py  pyproject.toml
services/graph_processor_service/middleware/: __init__.py
services/graph_processor_service/routes/: graph_routes.py  health_routes.py
services/graph_processor_service/services/: graph_service.py
services/llm_service/: Dockerfile  app.py  pyproject.toml
services/llm_service/middleware/: __init__.py
services/llm_service/routes/: health_routes.py  llm_routes.py
services/llm_service/services/: llm_service.py
services/orchestrator_service/: Dockerfile  app.py  distributed_orchestrator.py  pyproject.toml
services/orchestrator_service/clients/: __init__.py  service_clients.py
services/orchestrator_service/middleware/: __init__.py
services/orchestrator_service/routes/: __init__.py  health_routes.py  orchestrator_routes.py
services/orchestrator_service/services/: __init__.py  orchestrator_service.py
