[tool.poetry]
name = "multimodal-graph-rag-file-search"
version = "2.0.0"
description = "A modular Graph RAG (Retrieval-Augmented Generation) implementation with caching and rate limiting"
authors = ["Fabian Skalski"]
readme = "README.md"
packages = [{include = "graph_rag", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
# HTTP client for microservices communication
httpx = "^0.27.0"
# Environment variable management for API keys and configuration
python-dotenv = "^1.2.1"
# Pydantic for data validation and settings management
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
