[tool.poetry]
name = "llm-service"
version = "1.0.0"
description = "LLM operations service"
authors = ["Fabian Skalski"]
packages = [{include = "llm_service"}]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.121.3"
uvicorn = "^0.38.0"
pydantic = "^2.0.0"
openai = "^1.50.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
